# voxelProcessing

./: CMakeLists.txt
demo/76/: 76-crop.ply  trans.txt  vis.txt
demo/76/txt/: 00000002.txt  00000003.txt  00000004.txt  00000005.txt  00000006.txt  00000009.txt  00000010.txt  00000012.txt  00000013.txt  00000017.txt  00000018.txt  00000019.txt  00000020.txt  00000021.txt  00000024.txt  00000025.txt  00000026.txt  00000027.txt  00000028.txt  00000031.txt  00000032.txt  00000050.txt  00000054.txt
src/: CMakeLists.txt  IO.h  Makefile  RayCaster.cpp  RayCaster.h  camera.cpp  camera.h  main.cpp  voxelizer.cpp  voxelizer.h
